2020-02-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.54  Beta version.
	* configure.ac, main.c, COPYRIGHT: Bump version
	and copyright year.
	* {convert,fwrite,sort}.c:
	Support Small Kana Extension in Unicode 12.0.
	Add CJK Unified Ideographs Extension G.
	Update samples.

2020-01-16  Karl Berry  <karl@freefriends.org>

	* configure.ac,
	* COPYRIGHT,
	* main.c (VERSION): version 0.53 for TL'20.

2019-12-12  Karl Berry  <karl@freefriends.org>

	* configure.ac: look for a pthread library cntaining
	pthread_create (using KPSE_SEARCH_LIBS) and set PTHREAD_LIB if found.
	* Makefile.am (LDADD): include $(PTHREAD_LIB).
	
As of ICU 65.1, upmendex requires -lpthread. Otherwise, it crashes
at sort.c:82, which merely creates the icu_collator:
    icu_collator = ucol_open(icu_locale, &status);

About 10 stack frames deep into the ICU initialization, this winds up calling
(Build/source/libs/icu/icu-src/source/common/umutex.cpp:146):
    std::call_once(*pInitFlag, umtx_init);

which results in a fatal error from stdc++:
    terminate called after throwing an instance of 'std::system_error'
      what():  Unknown error -1

Web searching indicated that that opaque error message is a result of not
linking with -lpthread. So now we do so. So far our other ICU programs
(bibtexu, xetex) don't seem to require it.

2019-03-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* upmendex.ja.txt: Rename from upmendex.doc,
	  minor update.

2019-03-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	Fix a bug in multibytelen().

2019-02-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.52  Beta version.
	* main.c, COPYRIGHT: Update copyright year.
	* fread.c: Fix typo. It seems a bug.
	* {convert,fread,fwrite,kp,sort,styfile}.c, {hanzi,mendex}.h:
	Avoid compiler warnings.
	Thanks to @ngothan for a report by covscan.
	https://github.com/TeX-Live/texlive-source/issues/11

2017-04-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c: Avoid access violation.
	Thanks to I. Wada san.