@@ -1,3 +1,9 @@
+2020-05-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* main.c, version.h, Makefile.{am.in}: Add bug report addresses
+	on command line help.
+	* convert.c: Tune buffer sizes to avoid tool warnings.
+
 2020-02-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* version 0.54  Beta version.
